[gd_scene load_steps=4 format=3 uid="uid://ceei28qomng61"]

[ext_resource type="Texture2D" uid="uid://caq7hng0xdyvq" path="res://assets/images/game_intro_a.jpg" id="1_tplld"]
[ext_resource type="Script" path="res://scripts/MMCanvasLayer.gd" id="2_3d2mf"]
[ext_resource type="FontFile" uid="uid://bp17nvk3j288l" path="res://assets/fonts/1joystix.ttf" id="3_hlghw"]

[node name="MainMenu" type="Node"]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tplld")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_3d2mf")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LabelGameName" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 40
text = "Indie
Game Dev Sim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="ButtonSettings" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="LabelSettings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 40
text = "Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings2" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings3" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings4" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings5" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings6" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings7" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings8" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSettings9" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 20
text = "put your settings here...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonSettingsBack" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("3_hlghw")
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPlay" to="CanvasLayer" method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonSettings" to="CanvasLayer" method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/ButtonSettingsBack" to="CanvasLayer" method="_on_button_settings_back_pressed"]
